# opencl_canny

./: CMakeLists.txt  README.md  guassian.cpp  main.cpp
image/: image0_met.AIpng
kernel/: guassian.cl  hysteresis.cl  sobal.cl
src/: CMakeLists.txt  imageProcess.cpp  imageProcess.hpp
